--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,14 +1,10 @@
 [isort]
-profile = black
-known_first_party = app
+multi_line_output = 3
+src_paths = ./src
 
 [flake8]
-ignore = W503,E203
-max-complexity = 7
-max-line-length = 120
-per-file-ignores =
+max-line-length = 88
 statistics = True
-    __init__.py: F401
 
 [mypy]
 follow_imports = skip
@@ -16,3 +12,6 @@ ignore_missing_imports = False
 mypy_path = ./src
 plugins = pydantic.mypy
 strict_optional = True
+
+[mypy-*.fixtures]
+ignore_errors = True
