--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.14",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -18,7 +18,7 @@
     "@vue/cli-plugin-router": "~4.5.17",
     "@vue/cli-plugin-vuex": "~4.5.17",
     "@vue/cli-service": "~4.5.17",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.33",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2"
   },
