--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "sass": "^1.51.0",
+    "swiper": "^6.8.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.0-0"
@@ -19,7 +21,6 @@
     "@vue/cli-plugin-vuex": "~4.5.17",
     "@vue/cli-service": "~4.5.17",
     "@vue/compiler-sfc": "^3.2.33",
-    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2"
   },
   "browserslist": [
