Change structure. Add endpoints for Category and Product

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -9,3 +9,6 @@ DATABASE_PASSWORD=postgres
 DATABASE_NAME=cabel_torg_dev
 DATABASE_HOST=db
 DATABASE_PORT=5432
+
+# XML parsing
+XML_BOOKKEEPING_FILE_PATH=/Users/dzmitry/projects/2022/cabel_torg/backend/test.xml
