--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,11 @@ fastapi = "^0.75.0"
 alembic = "^1.7.7"
 SQLAlchemy = "^1.4.32"
 uvicorn = "^0.17.6"
+pydantic = {extras = ["dotenv"], version = "^1.9.0"}
+asyncpg = "^0.25.0"
+gunicorn = "^20.1.0"
+strawberry-graphql = "^0.111.2"
+fastapi-pagination = "^0.9.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
