--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,10 @@ version: '3.9'
 services:
   db:
     image: postgres
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data/
     ports:
-    - '5433:5432'
+      - '5432:5432'
     env_file:
       - backend/.env.dev
     networks:
@@ -18,8 +20,6 @@ services:
       - ./backend:/code
     ports:
       - '8000:8000'
-    env_file:
-      - backend/.env.dev
     depends_on:
       - db
     networks:
@@ -28,3 +28,6 @@ services:
 networks:
   backend:
   frontend:
+
+volumes:
+  db:
