Wrap frontend in docker

--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,2 @@
-VUE_APP_API_URL=https://cabeltorg.herokuapp.com/api/v1/
+VUE_APP_API_URL=http://localhost:8000/api/v1/
 VUE_APP_IMAGES=https://localhost:8080/img/
