--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -10,5 +10,8 @@ DATABASE_NAME=cabel_torg_dev
 DATABASE_HOST=db
 DATABASE_PORT=5432
 
+CORS_ALLOWED_HEADERS=*
+ORIGINS=localhost
+
 # XML parsing
 XML_BOOKKEEPING_FILE_PATH=/Users/dzmitry/projects/2022/cabel_torg/backend/test.xml
