--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -5,8 +5,8 @@ services:
     image: postgres
     volumes:
       - ./data/postgres:/var/lib/postgresql/data/
-    expose:
-      - 5432
+    ports:
+      - '5433:5432'
     env_file:
       - backend/.env.dev
     networks:
