--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -9,8 +9,6 @@ services:
       - '5433:5432'
     env_file:
       - backend/.env.dev
-    networks:
-      - backend
 
   backend:
     build:
@@ -22,24 +20,12 @@ services:
       - '8000:8000'
     depends_on:
       - db
-    networks:
-      - backend
-      - frontend
 
-  frontend:
+  nginx:  # Copy static files during building this container
     build:
-      context: front
-      dockerfile: ./build/Dockerfile
+      context: .
+      dockerfile: ./nginx/Dockerfile
+    restart: unless-stopped
     ports:
-      - '8080:80'
-    depends_on:
-      - backend
-    networks:
-      - frontend
-
-networks:
-  backend:
-  frontend:
-
-volumes:
-  db:
+      - '80:80'
+      - '443:443'  # for https
