--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,7 @@
+upstream backend {
+    server backend:8000;
+}
+
 server {
     listen 80;
 
@@ -7,7 +11,7 @@ server {
         try_files $uri $uri/ /index.html =404;
     }
 
-    location /api/v1/ {
-        proxy_pass http://backend/api/v1/;
+    location /api/ {
+        proxy_pass http://backend/api/;
     }
 }
