--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -13,5 +13,11 @@ DATABASE_PORT=5432
 CORS_ALLOWED_HEADERS=*
 ORIGINS=localhost
 
+# REDIS
+REDIS_URL=
+
+# JWT Auth
+JWT_SECRET_KEY=
+
 # XML parsing
 XML_BOOKKEEPING_FILE_PATH=/Users/dzmitry/projects/2022/cabel_torg/backend/test.xml
