create a template for user registeration

--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,3 @@
 #VUE_APP_API_URL=/api/v1/
-VUE_APP_API_URL=https://cabeltorg.herokuapp.com/api/v1/
+VUE_APP_API_URL=http://194.62.19.21/api/v1/
 VUE_APP_IMAGES=https://localhost:8080/img/
