Modify make file, clean code, add cart and watchlist functionality

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -16,8 +16,14 @@ pyjwt = "*"
 bcrypt = "*"
 python-multipart = "*"
 aioredis = "*"
+sqladmin = "*"
+requests = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-asyncio = "*"
+faker = "*"
+httpx = "*"
 
 [requires]
 python_version = "3.10"
