Add volumes to images, change a nginx configuration

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -30,7 +30,10 @@ services:
     restart: unless-stopped
     ports:
       - '80:80'
+      - '81:81'  # for images
       - '443:443'  # for https
+    volumes:
+      - /root/images:/usr/share/nginx/images/
         
   redis:
     image: redis:latest
