--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,3 +15,9 @@ server {
         proxy_pass http://backend/api/;
     }
 }
+
+server {
+    listen 81;
+    root /usr/share/nginx/images;
+    autoindex on;
+}
