--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   db:
-    image: postgres
+    image: postgres:15.1
     volumes:
       - ./data/postgres:/var/lib/postgresql/data/
     expose:
