Fix tables' names and add endpoint for generating invoices

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -18,6 +18,8 @@ python-multipart = "*"
 aioredis = "*"
 sqladmin = "*"
 requests = "*"
+pdfkit = "*"
+num2words = "*"
 
 [dev-packages]
 pytest = "*"
