Clean migrations; Add volume for a docker-compose file

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -32,8 +32,8 @@ services:
       - '80:80'
       - '81:81'  # for images
       - '443:443'  # for https
-#    volumes:
-#      - /root/images:/usr/share/nginx/images/
+    volumes:
+      - /root/images:/usr/share/nginx/images/
 
   redis:
     image: redis:latest
