--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,17 +5,27 @@ upstream backend {
 server {
     listen 80;
 
+    # Serve static files
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
 
+    # Proxy requests to the backend server
     location /api/ {
         proxy_pass http://backend/api/;
     }
+
+    # Serve admin files
+    location /admin/ {
+        alias /usr/share/nginx/admin/;
+        index index.html;
+        try_files $uri $uri/ /admin/index.html =404;
+    }
 }
 
+# Server block for serving static files
 server {
     listen 81;
     root /usr/share/nginx/images;
