--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,27 +7,38 @@ server {
 
     # Serve static files
     location / {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/client_app/;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ /client_app/index.html =404;
+    }
+
+    # Serve admin files
+    location /admin/ {
+        return 301 http://127.0.0.1:82/;
     }
 
     # Proxy requests to the backend server
     location /api/ {
         proxy_pass http://backend/api/;
     }
+}
 
-    # Serve admin files
-    location /admin/ {
-        alias /usr/share/nginx/admin/;
-        index index.html;
-        try_files $uri $uri/ /admin/index.html =404;
+server {
+    listen 82;
+
+    location ^(/|/admin/) {
+        root /usr/share/nginx/admin_app/;
+        index index.html index.htm;
+        try_files $uri $uri/ /admin_app/index.html =404;
+        autoindex on;
+        sendfile on;
     }
 }
 
 # Server block for serving static files
 server {
     listen 81;
-    root /usr/share/nginx/images;
+    root /usr/share/nginx/;
     autoindex on;
+    sendfile on;
 }
