--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "@vueup/vue-quill": "^1.1.1",
     "axios": "^1.3.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
