Fix images in nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -38,7 +38,7 @@ server {
 # Server block for serving static files
 server {
     listen 81;
-    root /usr/share/nginx/;
+    root /usr/share/nginx/images;
     autoindex on;
     sendfile on;
 }
