Change: Inovice generator

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,23 +1,28 @@
-# db
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=cabel_torg_dev
+# Database
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 
-# core
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=cabel_torg_dev
-DATABASE_HOST=db
-DATABASE_PORT=5432
+# Core
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_HOST=
+DATABASE_PORT=
+IMAGES_PATH=
+STATIC_PATH=
 
 CORS_ALLOWED_HEADERS=*
-ORIGINS=localhost
+ORIGINS=*
+DEBUG=1
+BOOKKEEPING_SHOULD_BE_PARSED=0
 
-# REDIS
+# Redis
 REDIS_URL=
 
 # JWT Auth
 JWT_SECRET_KEY=
 
 # XML parsing
-XML_BOOKKEEPING_FILE_PATH=/Users/dzmitry/projects/2022/cabel_torg/backend/test.xml
+XML_BOOKKEEPING_FILE_PATH=
+PATH_TO_XML_FILE_WITH_PRICES=
