--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -17,6 +17,10 @@ ORIGINS=*
 DEBUG=1
 BOOKKEEPING_SHOULD_BE_PARSED=0
 
+# SMTP
+SMTP_EMAIL_SENDER=no-reply@domain.com
+SMTP_HOST=
+
 # Redis
 REDIS_URL=
 
