Change: path to index.html in nginx.conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,8 +8,8 @@ server {
     # Serve static files
     location / {
         root /usr/share/nginx/client_app/;
+        try_files $uri $uri/ /index.html;
         index index.html index.htm;
-        try_files $uri $uri/ /client_app/index.html =404;
     }
 
     # Serve admin files
@@ -26,10 +26,10 @@ server {
 server {
     listen 82;
 
-    location ^(/|/admin/) {
+    location / {
         root /usr/share/nginx/admin_app/;
+        try_files $uri $uri/ /index.html =404;
         index index.html index.htm;
-        try_files $uri $uri/ /admin_app/index.html =404;
         autoindex on;
         sendfile on;
     }
