--- a/ssr/package.json
+++ b/ssr/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@types/node": "^18",
     "nuxt": "^3.4.2",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "swiper": "^6.8.4"
   },
   "dependencies": {
     "axios": "^1.3.6",
