--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -24,6 +24,13 @@ services:
       - db
       - redis
 
+  frontend:
+    build:
+      context: ssr
+      dockerfile: ./build/Dockerfile
+    ports:
+      - '800:800'
+
   nginx: # Copy static files during building this container
     build:
       context: .
