--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,13 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build:
+      context: ssr
+      dockerfile: ./build/Dockerfile
+    ports:
+      - '800:800'
+
   nginx:  # Copy static files during building this container
     build:
       context: .
