--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -22,8 +22,8 @@ COPY --from=build-client-frontend-stage /client_frontend/dist /usr/share/nginx/c
 COPY --from=build-admin-frontend-stage /admin_frontend/dist /usr/share/nginx/admin_app
 # Copy nginx configruations
 COPY /nginx/default.conf /etc/nginx/conf.d/default.conf
-# Create a directory for maintaing images
-RUN mkdir -p /usr/share/nginx/images
+# Create a directory for maintaing images and stattic files
+RUN mkdir -p /usr/share/nginx/site_media
 
 
 CMD ["nginx", "-g", "daemon off;"]
