--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -16,7 +16,7 @@ services:
       context: backend
       dockerfile: ./build/Dockerfile
     volumes:
-      - images:/images
+      - site_media:/site_media
       - ./backend:/backend
     ports:
       - '8000:8000'
@@ -42,7 +42,7 @@ services:
       - '81:81'  # for images
       - '443:443'  # for https
     volumes:
-      - images:/usr/share/nginx/images/
+      - site_media:/usr/share/nginx/site_media/
 
   redis:
     image: redis:latest
@@ -50,4 +50,4 @@ services:
       - '6379:6379'
 
 volumes:
-  images:
+  site_media:
