--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,17 +4,13 @@ upstream backend {
 
 server {
     listen 80;
-
+    # задать явно сервернэйм
+    # добавить логирование на уровне nginx 
     # Serve static files
     location / {
         root /usr/share/nginx/client_app/;
         try_files $uri $uri/ /index.html;
         index index.html index.htm;
-    }
-
-    # Serve admin files
-    location /admin/ {
-        return 301 http://127.0.0.1:82/;
     }
 
     # Proxy requests to the backend server
@@ -24,7 +20,8 @@ server {
 }
 
 server {
-    listen 82;
+    listen 80;
+    server_name admin.cabel-torg-test-domain.net.by;
 
     location / {
         root /usr/share/nginx/admin_app/;
@@ -38,6 +35,7 @@ server {
 # Server block for serving static files
 server {
     listen 81;
+    # Более 1024
     root /usr/share/nginx/site_media;
     autoindex on;
     sendfile on;
