--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,8 +4,8 @@ upstream backend {
 
 server {
     listen 80;
-    # задать явно сервернэйм
-    # добавить логирование на уровне nginx 
+    server_name cabel-torg-test-domain.net.by;
+    # добавить логирование на уровне nginx
     # Serve static files
     location / {
         root /usr/share/nginx/client_app/;
@@ -29,6 +29,25 @@ server {
         index index.html index.htm;
         autoindex on;
         sendfile on;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name cabel-torg-test-domain.net.by;
+    ssl_certificate /ssl/cert.pem
+    ssl_certificate_key /ssl/key.pem
+
+    access_log /var/log/nginx/data-access.log combined;
+
+    location / {
+        root /usr/share/nginx/client_app/;
+        try_files $uri $uri/ /index.html;
+        index index.html index.htm;
+    }
+
+    location /api/ {
+        proxy_pass http://backend/api/;
     }
 }
 
