Fix: nginx config file

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -35,8 +35,8 @@ server {
 server {
     listen 443 ssl;
     server_name cabel-torg-test-domain.net.by;
-    ssl_certificate /ssl/cert.pem
-    ssl_certificate_key /ssl/key.pem
+    ssl_certificate /ssl/cert.pem;
+    ssl_certificate_key /ssl/key.pem;
 
     access_log /var/log/nginx/data-access.log combined;
 
