Add: dhparam.pem

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -37,6 +37,7 @@ server {
     server_name cabel-torg-test-domain.net.by;
     ssl_certificate /ssl/cert.pem;
     ssl_certificate_key /ssl/key.pem;
+    ssl_dhparam /ssl/dhparam.pem;
 
     access_log /var/log/nginx/data-access.log combined;
 
