--- a/load_balancer/default.conf
+++ b/load_balancer/default.conf
@@ -20,14 +20,10 @@ server {
 
 server {
     listen 80;
-#     server_name cabel-torg-test-domain.net.by;
+    server_name cabel-torg-test-domain.net.by;
 
     location / {
         proxy_pass http://frontend/;
-    }
-
-    location /admin {
-        proxy_pass http://admin_dashboard/;
     }
 
     location /api/ {
@@ -43,7 +39,29 @@ server {
         proxy_pass http://frontend/;
     }
 
-    location /admin {
+    location /api/ {
+        proxy_pass http://backend/api/;
+    }
+}
+
+server {
+    listen 80;
+    server_name admin.cabel-torg-test-domain.net.by;
+
+    location / {
+        proxy_pass http://admin_dashboard/;
+    }
+
+    location /api/ {
+        proxy_pass http://backend/api/;
+    }
+}
+
+server {
+    listen 443;
+    server_name admin.cabel-torg-test-domain.net.by;
+
+    location / {
         proxy_pass http://admin_dashboard/;
     }
 
