--- a/load_balancer/default.conf
+++ b/load_balancer/default.conf
@@ -22,17 +22,15 @@ server {
     listen 80;
     server_name cabel-torg-test-domain.net.by;
 
-    location / {
-        proxy_pass http://frontend/;
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
-    location /api/ {
-        proxy_pass http://backend/api/;
-    }
+    return 301 https://cabel-torg-test-domain.net.by$request_uri;
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name cabel-torg-test-domain.net.by;
 
     location / {
@@ -42,19 +40,22 @@ server {
     location /api/ {
         proxy_pass http://backend/api/;
     }
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
 
 server {
     listen 80;
     server_name admin.cabel-torg-test-domain.net.by;
 
-    location / {
-        proxy_pass http://admin_dashboard/;
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
-    location /api/ {
-        proxy_pass http://backend/api/;
-    }
+    return 301 https://admin.cabel-torg-test-domain.net.by$request_uri;
 }
 
 server {
@@ -68,6 +69,11 @@ server {
     location /api/ {
         proxy_pass http://backend/api/;
     }
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
 
 
