--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,7 @@ services:
       - '8010:8010'  # for images and static files
     volumes:
       - ./data/site_media:/usr/share/nginx/site_media/
+      - ./data/nginx:/etc/nginx/conf.d/
       - ./data/certbot/www:/var/www/certbot  # certbot
       - ./data/certbot/conf:/etc/letsencrypt  # certbot
 
