--- a/reverse_proxy/default.conf
+++ b/reverse_proxy/default.conf
@@ -41,10 +41,10 @@ server {
         proxy_pass http://backend/api/;
     }
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+#     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
 
 server {
@@ -70,10 +70,10 @@ server {
         proxy_pass http://backend/api/;
     }
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+#     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
 
 
