--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -11,17 +11,37 @@ services:
       - '5434:5432'
     volumes:
       - ./data/postgres:/var/lib/postgresql/data/
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+  parser:
+    container_name: 'dev_parser'
+    build:
+      context: backend
+      dockerfile: ./build/Dockerfile
+      target: parser
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./backend:/backend
 
   backend:
     container_name: 'dev_backend'
     build:
       context: backend
       dockerfile: ./build/Dockerfile
+      target: backend
     ports:
       - '8000:8000'
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
     volumes:
       - ../data/site_media:/site_media
       - ./backend:/backend
@@ -62,8 +82,11 @@ services:
       - '443:443'  # for https
       - '8010:8010'  # for images and static files
     depends_on:
-      - frontend
-      - backend
-      - admin_dashboard
+      backend:
+        condition: service_started
+      frontend:
+        condition: service_started
+      admin_dashboard:
+        condition: service_started
     volumes:
       - ./data/site_media:/usr/share/nginx/site_media/
