--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -30,6 +30,6 @@ REDIS_URL=
 JWT_SECRET_KEY=
 
 # XML parsing. If LAUNCH_PARSER_EACH_N_MINUTES is set 0 it means that parser shouldn't do his job.
-XML_BOOKKEEPING_FILE_PATH=
-XML_FILE_WITH_PRICES_PATH=
+BOOKKEEPING_FILE_PATH=
+FILE_WITH_PRICES_PATH=
 LAUNCH_PARSER_EACH_N_MINUTES=0
