--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -39,7 +39,7 @@ services:
       db:
         condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
     volumes:
       - ../data/site_media:/site_media
       - ./backend:/backend
@@ -49,6 +49,8 @@ services:
     image: redis:latest
     ports:
       - '6379:6379'
+    healthcheck:
+      test: [ "CMD", "redis-cli","ping" ]
 
   #  Frontend part
   admin_dashboard:
