--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
       db:
         condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
     volumes:
       - ./data/site_media:/site_media
       - ./backend:/backend
@@ -47,6 +47,8 @@ services:
     image: redis:latest
     ports:
       - '6379:6379'
+    healthcheck:
+      test: [ "CMD", "redis-cli","ping" ]
 
   #  Frontend part
   admin_dashboard:
