Add depends on redis for parser

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -26,6 +26,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
   backend:
     container_name: 'dev_backend'
