--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -30,7 +30,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name cabel-torg-test-domain.net.by;
 
     location / {
@@ -41,10 +41,14 @@ server {
         proxy_pass http://backend/api/;
     }
 
-#     include /etc/letsencrypt/options-ssl-nginx.conf;
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-#     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+    location /test/ {
+        alias /usr/share/nginx/html/;
+    }
+
+     include /etc/letsencrypt/options-ssl-nginx.conf;
+     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
 
 server {
@@ -59,7 +63,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name admin.cabel-torg-test-domain.net.by;
 
     location / {
@@ -70,10 +74,8 @@ server {
         proxy_pass http://backend/api/;
     }
 
-#     include /etc/letsencrypt/options-ssl-nginx.conf;
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-#     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+     include /etc/letsencrypt/options-ssl-nginx.conf;
+     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
-
-
