--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
     build:
       context: backend
       dockerfile: ./build/Dockerfile
+      target: parser
     depends_on:
       db:
         condition: service_healthy
@@ -33,6 +34,8 @@ services:
     build:
       context: backend
       dockerfile: ./build/Dockerfile
+      target: backend
+
     ports:
       - '8000:8000'
     depends_on:
